--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
     implementation 'com.google.android.gms:play-services-auth:20.1.0'
+    implementation "com.github.bumptech.glide:glide:4.13.0"
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
