--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:28.3.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth:21.0.3'
+    implementation 'com.firebaseui:firebase-ui-firestore:8.0.1'
     implementation 'com.firebaseui:firebase-ui-auth:8.0.0'
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
     implementation "com.github.bumptech.glide:glide:4.13.0"
