--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,13 +7,13 @@ plugins {
 
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.example.anna"
         minSdkVersion 23
-        targetSdkVersion 32
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
 
@@ -30,6 +30,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
     dataBinding{
         enabled true
     }
@@ -49,13 +50,14 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.4.2'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.firebase:firebase-database:20.0.5'
     implementation 'com.google.firebase:firebase-storage:20.0.1'
     implementation 'com.google.firebase:firebase-firestore:24.1.2'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    implementation 'androidx.recyclerview:recyclerview:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation platform('com.google.firebase:firebase-bom:28.3.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth:21.0.5'
@@ -64,6 +66,13 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
     implementation "com.github.bumptech.glide:glide:4.13.0"
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
+    implementation 'com.github.yuriy-budiyev:code-scanner:2.3.2'
+
+    //implementation 'com.paypal.sdk:paypal-android-sdk:2.16.0'
+    //implementation('com.paypal.checkout:android-sdk:0.2.0')
+    //implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+
+
 }
 
 apply plugin: 'com.google.gms.google-services'
