--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,48 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+
 buildscript {
     repositories {
         google()
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.2'
-        classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.android.tools.build:gradle:7.1.1'
+        classpath 'com.google.gms:google-services:4.3.12'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
-
+plugins {
+    id 'org.jetbrains.kotlin.jvm' version '1.7.0'
+}
 allprojects {
+
     repositories {
         google()
         mavenCentral()
+        maven {
+            url "https://cardinalcommerceprod.jfrog.io/artifactory/android"
+            credentials {
+                // Be sure to add these non-sensitive credentials in order to retrieve dependencies from
+                // the private repository.
+                username usernameMaven
+                password passwordMaven
+            }
+        }
+        maven{
+            url 'https://jitpack.io'
+        }
 
         //jcenter() // Warning: this repository is going to shut down soon
     }
 }
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+repositories {
+    mavenCentral()
 }
+dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+}
+
