--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
             android:name=".MenuPrincipal.MenuMainActivity"
             android:exported="false"
             android:label="@string/title_activity_menu_main"
+            android:windowSoftInputMode="adjustPan"
             android:theme="@style/Theme.Anna.NoActionBar" />
         <activity
             android:name=".MenuPrincipal.Profile.FragmentProfile"
