--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.FLASHLIGHT"/>
 
     <uses-feature
         android:name="android.hardware.camera"
@@ -53,7 +54,7 @@
         <activity
             android:name=".Register.PaymentSelected"
             android:exported="true" />
-        <activity android:name=".MenuPrincipal.MyRoutes.MyRoutesClickedActivity"
+        <activity android:name=".MenuPrincipal.Routes.MyRoutes.MyRoutesClickedActivity"
             android:exported="true"/>
         <activity android:name=".MenuPrincipal.Routes.StationDetail" />
         <activity android:name=".MenuPrincipal.Profile.EditProfile" />
