--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@drawable/logoruralsecrets"
+        android:roundIcon="@drawable/logoruralsecrets"
         android:supportsRtl="true"
         android:label="RuralSecrets"
         android:theme="@style/Theme.Anna.NoActionBar"
